GF-52365: Remove small header transition (animation handled by StyleAnimator via collapseHeader() and expandHeader()).  Add resized call after smallHeaderChanged, to ensure fittable is sized correctly if changed at runtime. DCO-1.1-Signed-Off-By: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/css/Header.less
+++ b/css/Header.less
@@ -13,8 +13,8 @@
 	margin: 0 @moon-spotlight-outset;
 }
 .moon-neutral .moon-header{
-   border-top: 2px solid @moon-neutral-border-color;
-  border-bottom: 6px solid @moon-neutral-border-color;
+	border-top: 2px solid @moon-neutral-border-color;
+	border-bottom: 6px solid @moon-neutral-border-color;
 }
 .moon-header.full-bleed {
 	padding-left: @moon-header-indent-width;
@@ -97,9 +97,6 @@
 /* Small Header */
 .moon-header.moon-small-header {
 	height: 240px;
-	transition: height 0.2s linear;
-	-webkit-transition: height 0.2s linear;
-	-moz-transition: height 0.2s linear;
 }
 
 .moon-small-header .moon-header-title-above{
